tests/feature_tests/snapshots/e2e__feature_tests__use_engines_specific__Fish.snap
---
source: tests/feature_tests/mod.rs
expression: "&source.trim()"
---
fnm env | source
echo '{"engines": {"node": "8.11.3"}}' > package.json
fnm install
fnm use
if test (node -v) != "v8.11.3"
    echo 'Expected Node version to be "v8.11.3", Got: '(node -v)
    exit 1
end
