tests/feature_tests/snapshots/e2e__feature_tests__use_engines_specific__PowerShell.snap
---
source: tests/feature_tests/mod.rs
expression: "&source.trim()"
---
$ErrorActionPreference = "Stop"
fnm env | Out-String | Invoke-Expression
echo '{"engines": {"node": "8.11.3"}}' > 'package.json'
fnm install
fnm use
If ("$(node -v)" -ne "v8.11.3") {
    Write-Output ('Expected Node version to be "v8.11.3", Got: ' + $(node -v))
    exit 1
}
