tests/feature_tests/snapshots/e2e__feature_tests__use_engines_specific__Zsh.snap
---
source: tests/feature_tests/mod.rs
expression: "&source.trim()"
---
set -e
eval "$(fnm env)"
echo '{"engines": {"node": "8.11.3"}}' > package.json
fnm install
fnm use
if [ "$(node -v)" != "v8.11.3" ]; then
    echo 'Expected Node version to be "v8.11.3", Got: '"$(node -v)"
    exit 1
fi
